# strata-insurance-corpus

./: .gitignore  BRIEF.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/commands/: review-board.md
.github/workflows/: ci.yml
adapter/: README.md
docs/: data-card.md  data-model.md  format-matrix.md  related-work.md
generator/: README.md  __init__.py  content.py  eval.py  golden.py  identity.py  imageprompts.py  knowledge.py  manifest.py  model.py  pii.py  provenance.py  run.py  schema.py  stats.py  tabular.py  validate.py
generator/render/: __init__.py  _repro.py  docx.py  image.py  markdown.py  pdf.py  scan.py  sheets.py
generator/render/templates/: accident_statement.html.j2  adjuster_report.html.j2  base.css  declarations.html.j2  denial_letter.html.j2  endorsements.html.j2  estimate.html.j2  fnol.html.j2  id_card.html.j2  police_report.html.j2  schedule.html.j2  settlement_letter.html.j2
golden/: README.md  golden.jsonl
sample/: README.md  golden.jsonl  image-prompts.jsonl  manifest.json  model.json  pii-index.jsonl  predictions.example.jsonl  roster.tsv
sample/docs/kb/: claims-handling-manual.docx  customer-faq.md  underwriting-guidelines.md
sample/docs/policy/: COM-0000001-contract.docx  COM-0000003-contract.docx  COM-0000004-contract.docx  COM-0000005-contract.docx  HH-0000001-contract.docx  HH-0000004-contract.docx  HO-0000001-contract.docx  HO-0000003-contract.docx  MOT-0000002-contract.docx  MOT-0000003-contract.docx  MOT-0000004-contract.docx  MOT-0000005-contract.docx  PA-0000002-contract.docx  PA-0000004-contract.docx  PA-0000005-contract.docx
sample/docs/tabular/: commission-summary.csv  loss-run.xlsx  premium-register.xlsx  reserve-register.xlsx
sample/schema/: model.schema.json  roster.schema.json
tests/: test_determinism.py  test_eval.py  test_pii.py
