[project]
name = "strata-insurance-corpus"
version = "0.0.1"
description = "Reproducible synthetic multi-format insurance document corpus + golden eval set"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Nikolai Sachok" }]

# Generator runtime deps. Kept minimal + standard; resolved to latest compatible by uv.
dependencies = [
  "faker>=25",          # seeded synthetic entities (names, addresses, ids)
  "jinja2>=3",          # HTML/text templating for documents
  "weasyprint>=62",     # HTML/CSS -> born-digital PDF (system libs: cairo/pango/gdk-pixbuf)
  "python-docx>=1",     # .docx rendering (M2)
  "openpyxl>=3",        # .xlsx tabular rendering (M2)
  "pillow>=10",         # image handling + scan-effect compositing (M3)
  "pyyaml>=6",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["generator*"]

[project.urls]
Homepage = "https://github.com/NikolaiSachok/strata-insurance-corpus"
Engine = "https://github.com/NikolaiSachok/Strata-RAG"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
